--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
