--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
+    "@tsparticles/all": "^3.4.0",
+    "@tsparticles/basic": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
@@ -21,7 +24,9 @@
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.0.7",
+    "tsparticles": "^3.4.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
