--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@tsparticles/all": "^3.4.0",
     "@tsparticles/basic": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
- 
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    
     "styled-components": "^6.0.7",
     "tsparticles": "^3.4.0",
     "vite-plugin-svgr": "^3.2.0"
