--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/kalam": "^5.0.13",
     "@mui/material": "^5.15.18",
+    "@react-pdf/renderer": "^3.4.4",
     "@tsparticles/all": "^3.4.0",
     "@tsparticles/basic": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "framer-motion": "^11.2.10",
+    "pdfjs-dist": "^4.3.136",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-pdf": "^9.0.0",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7",
     "tsparticles": "^3.4.0",
