--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource-variable/josefin-sans": "^5.0.21",
     "@fontsource/kalam": "^5.0.13",
     "@mui/material": "^5.15.18",
     "@react-pdf/renderer": "^3.4.4",
