--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-pdf": "^9.0.0",
     "react-router-dom": "^6.25.1",
+    "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "styled-components": "^6.0.7",
     "tsparticles": "^3.4.0",
