--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.13.1",
     "react-pdf": "^9.0.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
