--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.460.0",
+    "next-themes": "^0.4.3",
     "pdfjs-dist": "^4.3.136",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "react-intersection-observer": "^9.13.1",
     "react-pdf": "^9.0.0",
     "react-perfect-scrollbar": "^1.5.8",
@@ -35,15 +40,20 @@
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "styled-components": "^6.0.7",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.4.0",
+    "typescript": "^5.7.2",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.84",
+    "@types/node": "^22.9.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.32.2",
@@ -51,7 +61,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "postcss": "^8.4.49",
     "prettier": "3.0.3",
+    "tailwindcss": "^3.4.15",
     "vite": "^4.4.5"
   },
   "lint-staged": {
