--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-pdf": "^9.0.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-router": "^7.0.1",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
