--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.460.0",
     "next-themes": "^0.4.3",
     "pdfjs-dist": "^4.3.136",
