--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@tsparticles/basic": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "@use-gesture/react": "^10.3.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.460.0",
     "next-themes": "^0.4.3",
