--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fontsource/kalam": "^5.0.13",
     "@mui/material": "^5.15.18",
     "@react-pdf/renderer": "^3.4.4",
-    "@react-spring/web": "^9.7.4",
+    "@react-spring/parallax": "^9.7.5",
+    "@react-spring/web": "^9.7.5",
     "@tsparticles/all": "^3.4.0",
     "@tsparticles/basic": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
