--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.460.0",
     "next-themes": "^0.4.3",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
