--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.4.0",
     "typescript": "^5.7.2",
+    "vanta": "^0.5.24",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
