--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.460.0",
+    "motion": "^12.9.4",
     "next-themes": "^0.4.3",
     "ogl": "^1.0.11",
     "react": "^18.2.0",
