--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource-variable/josefin-sans": "^5.0.21",
-    "@mui/material": "^5.15.18",
+    "@mui/material": "^5.17.1",
+    "@mui/styles": "^6.4.11",
     "@react-spring/parallax": "^9.7.5",
     "@react-spring/web": "^9.7.5",
     "@tsparticles/all": "^3.4.0",
@@ -33,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^4.1.4",
     "react-intersection-observer": "^9.13.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router": "^7.0.1",
     "react-router-dom": "^6.25.1",
     "react-spring": "^9.7.5",
