--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router": "^7.0.1",
     "react-router-dom": "^6.25.1",
     "react-spring": "^9.7.5",
+    "simplebar-react": "^3.3.2",
     "styled-components": "^6.0.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
