--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^4.1.4",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.13.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-router": "^7.0.1",
